Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.4
Description
The following change in MySQL 8.0.40 removed the constants OS_FILE_AIO and OS_FILE_NORMAL:
Bug#36259487 InnoDB: OS_FILE_NORMAL and OS_FILE_AIO are very misleading
Something like this seems to make sense in MariaDB as well. Removing one more parameter from multi-parameter functions could also make a measurable performance improvement on targets where this would allow all parameters to be passed via registers.
Attachments
Issue Links
- relates to
-
MDEV-35170 Merge applicable changes from InnoDB 8.0.40
-
- Closed
-