MDEV-35171 OS_FILE_NORMAL and OS_FILE_AIO are misleading

Removed 'purpose' parameter from os_file_create() and related functions.
Always use FILE_FLAG_OVERLAPPED when opening Windows files.

No performance regression was measured, nor there is any measurable
improvement.